Add delete method
