# backend/src/main/java/com/nickmous/beanstash/controller/UserController.java
@@ -9,6 +9,7 @@ import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -98,5 +99,19 @@ public class UserController {
         );
 
         return ResponseEntity.ok(response);
+    }
+
+    @DeleteMapping(path = "/user/{username}", version = "v1")
+    @PreAuthorize("hasAuthority('user:write') or #username == authentication.name")
+    public ResponseEntity<Void> delete(@PathVariable String username) {
+        User user = userRepository.findByUsername(username);
+
+        if (user == null) {
+            return ResponseEntity.notFound().build();
+        }
+
+        userRepository.delete(user);
+
+        return ResponseEntity.noContent().build();
     }
 }
